--- a/style.css
+++ b/style.css
@@ -46,11 +46,10 @@ a:hover {
   float: left;
 } 
 .date {
-  color: #CCCCCC;
+  color: #BBBBBB;
   font-size: 18px;
   font-weight: normal;
   text-align: right;
-  float: right;
 }
 .main-text {
   font-size: 18px;
