--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ a:hover {
   text-decoration: none;
 }
 .h3 {
-  font-size: 22px;
+  font-size: 24px;
   font-weight: normal;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
 }
 .menu {
   color: #F34F4C;
